gccida/g0/fname_as_string
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fname_as_string/src/c-common.c:956:24: error: use of undeclared identifier 'unk_74A1BC'
return ( const char *)&unk_74A1BC; 
                       ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fname_as_string/src/obj/c-common.o] Error 1
